Some dependency updates for JVM version 10